--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- Section-->
         <section class="py-5" >
             <div class="container px-4 px-lg-5 mt-5" >
-                <p id="link"><b>For booking schedules,please visit our instagram page <a href="" id="button">@sherin_design</a> </b></p>
+                <p id="link"><b>For booking schedules,please visit our instagram page <a href="https://www.instagram.com/mehandi.stains?igsh=MWlydDE5aXV1N203dA==" id="button">@mehandi.stains</a> </b></p>
                 
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center" >
                     <div class="col mb-5">
